# incubator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CONTRIBUTING.md  README.md  mypy.ini  printouts.txt  pyproject.toml  requirements-dev.txt  setup.py
.github/: pull_request_template.md 
.github/workflows/: black.yaml  checks.yaml  mypy.yaml  publish.yaml  tests.yaml
configs/codecraft/: allied_wealth-norotate.ron  allied_wealth-polar_rot_relpos_e8-2_s1k_inter.ron  allied_wealth-prad_relpos_e8-vftransrotate.ron  allied_wealth-ptransrotate-vfrelpos_e0_pekvproj.ron  allied_wealth-rad_relpos_e8_pekvproj.ron  allied_wealth-rad_rot_relpos_e8_pekvproj.ron  allied_wealth-relattn1.ron  allied_wealth-relattn2.ron  allied_wealth.ron  arena_medium-relattn1.ron  arena_medium-relattn2.ron  arena_medium.ron  arena_tiny_2v2-relattn1.ron  arena_tiny_2v2-relattn2.ron  arena_tiny_2v2-relattn3.ron  arena_tiny_2v2.ron
configs/entity-gym/: cherry_pick.ron  count.ron  floor_is_lava.ron  minefield-polar_rot_relpos_e8-2_s300_inter.ron  minefield-polar_rot_relpos_e8-2_s300_nointer.ron  minefield-prad_rot_relpos_e32-vftransrotate.ron  minefield-prad_rot_relpos_e32_interp-vftransrotate-tinynet.ron  minefield-prad_rot_relpos_e32_interp-vftransrotate.ron  minefield-rad_relpos_e32_kvproj.ron  minefield-rad_relpos_e8_kvproj.ron  minefield-rad_relpos_e8_pekvproj.ron  minefield-rad_rot_relpos_e32_kvproj.ron  minefield-rad_rot_relpos_e32_kvproj_interp.ron  minefield-relattn1.ron  minefield-relattn2.ron  minefield-transrotate.ron  minefield.ron  minefield_0mines-dedicated_vf.ron  minefield_0mines-notranslate.ron  minefield_0mines-prad_relpos_e2-vftranslate.ron  minefield_0mines-prad_relpos_e32-vftranslate.ron  minefield_0mines-prad_relpos_e8-vftranslate.ron  minefield_0mines-prelpos_e1-vftranslate.ron  minefield_0mines-ptranslate-vf_rel_interp_dist.ron  minefield_0mines-ptranslate-vfpolar.ron  minefield_0mines-ptranslate-vfreldist.ron  minefield_0mines-ptranslate-vfrelpos_e1_kvproj.ron  minefield_0mines-ptranslate-vfrelpos_e1_pekvproj.ron  minefield_0mines-rad_relpos_e32_kvproj.ron  minefield_0mines-rad_relpos_e8_kvproj.ron  minefield_0mines-rad_rot_relpos_e8_kvproj.ron  minefield_0mines-rad_rot_relpos_e8_kvproj_interp.ron  minefield_0mines-relpos_e1.ron  minefield_0mines-relpos_e1_kvproj.ron  minefield_0mines-rotate.ron  minefield_0mines.ron  move_to_origin.ron  multi_armed_bandit.ron  multisnake_1snakes11len.ron  multisnake_2snakes11len.ron  (+4 more)
configs/procgen/: bigfish.ron
configs/xprun/: train.ron  trainbc.ron  traincc.ron
enn_ppo/: README.md  config-schema.ron  pyproject.toml  requirements.txt  setup.py  tutorial.md
enn_ppo/docs/: ARCHITECTURE.md
enn_ppo/enn_ppo/: __init__.py  agent.py  config.py  eval.py  gae.py  hypertuna.py  load_checkpoint.py  ppo.py  rollout.py  sample_recorder.py  simple_trace.py  supervised.py  test_input_norm.py  test_sample_recorder.py  test_training.py  train.py
enn_ppo/enn_ppo/tests/: test_configs.py  test_training.py
enn_zoo/: README.md  pyproject.toml
enn_zoo/enn_zoo/: train.py
enn_zoo/enn_zoo/codecraft/: cc_vec_env.py  maps.py  rest_client.py  vec_env.py
enn_zoo/enn_zoo/codecraft/codecraftnet/: adapter.py  codecraftnet.py  config.py  spatial.py
enn_zoo/enn_zoo/griddly/: README.md  __init__.py  test_griddly_env.py  wrapper.py
enn_zoo/enn_zoo/griddly/env_descriptions/: clusters.yaml  clusters_entities.yaml  test.yaml  test_multi_entities.yaml
enn_zoo/enn_zoo/griddly/env_descriptions/test/: test_actions.yaml
enn_zoo/enn_zoo/griddly/level_generators/: clusters_generator.py  level_generator.py
enn_zoo/enn_zoo/griddly_env/: __init__.py  test_griddly_env.py  wrapper.py
enn_zoo/enn_zoo/griddly_env/env_descriptions/: clusters.yaml  clusters_entities.yaml
enn_zoo/enn_zoo/griddly_env/env_descriptions/grafter/: grafter_multi_4.yaml  grafter_multi_8.yaml  grafter_single.yaml
enn_zoo/enn_zoo/griddly_env/env_descriptions/grafter/shaders/: triangle-textured.frag  triangle-textured.frag.spv  triangle-textured.vert  triangle-textured.vert.spv
enn_zoo/enn_zoo/griddly_env/env_descriptions/test/: test.yaml  test_actions.yaml  test_multi_entities_actions.yaml
enn_zoo/enn_zoo/griddly_env/level_generators/: clusters_generator.py  crafter_generator.py
enn_zoo/enn_zoo/griddly_env/wrappers/: grafter_env.py  griddly_env.py
enn_zoo/enn_zoo/griddly_envs/: __init__.py  wrapper.py
enn_zoo/enn_zoo/griddly_envs/level_generators/: clusters_generator.py
enn_zoo/enn_zoo/microrts/: README.md  __init__.py  main.py
enn_zoo/enn_zoo/procgen_env/: base_env.py  big_fish.py  boss_fight.py  deserializer.py  fast_deserializer.py  leaper.py  plunder.py  star_pilot.py
enn_zoo/enn_zoo/vizdoom/: __init__.py  vizdoom_environment.py
enn_zoo/enn_zoo/vizdoom/scenarios/: health_gathering.cfg  health_gathering_supreme.cfg
enn_zoo/enn_zoo/vizdoom_env/: README.md  __init__.py  vizdoom_config.ron  vizdoom_environment.py
enn_zoo/enn_zoo/vizdoom_env/scenarios/: basic.cfg  health_gathering_supreme.cfg
enn_zoo/enn_zoo/vizdoom_envs/: __init__.py  vizdoom_environment.py
entity-gym/: environment.py
entity_gym/: ADVANCED-TUTORIAL.md  NEW_TUTORIAL.md  README.md  TUTORIAL.md  pyproject.toml  tutorial.md
entity_gym/entity_gym/: __init__.py  agent.py  cli_runner.py  dataclass_utils.py  environment.py  main.py  ragged_dict.py  runner.py  sample_recorder.py  simple_trace.py  tutorial.py  (+2 more)
ppo/: requirements.txt  sample_recorder.py  test_input_norm.py  test_sample_recorder.py  test_training.py  train.py
rogue_net/: README.md  pyproject.toml  requirements.txt  setup.py
rogue_net/rogue_net/: absolute_positional_encoding.py  actor.py  backbone_creator.py  categorical_action_head.py  embedding.py  embedding_creator.py  head_creator.py  input_norm.py  ragged_tensor.py  relpos_encoding.py  rogue_net.py  select_entity_action_head.py  test_input_norm.py  transformer.py  translate_positions.py
rogue_net/rogue_net/codecraftnet/: adapter.py  codecraftnet.py
rogue_net/rogue_net/tests/: test_action_head.py
xprun/: train.ron  trainbc.ron  traincc.ron
(+49 files in other folders)
