[tool.poetry]
name = "incubator"
version = "0.1.0"
description = ""
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
entity_gym = {path = "entity_gym", develop = true}
rogue_net = {path = "rogue_net", develop = true}
enn_ppo = {path = "enn_ppo", develop = true}
enn_zoo = {path = "enn_zoo", develop = true}
griddly = {version = "1.2.31"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
mypy = "^0.910"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"