[tool.poetry]
name = "enn_ppo"
version = "0.1.0"
description = "PPO training loop compatible with EntityGym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
tensorboard = "^2.7.0"
msgpack = "^1.0.3"
msgpack-numpy = "^0.4.7"
tqdm = "^4.62.3"
ragged-buffer = "^0.3.9"
wandb = "^0.12.7"
optuna = "^2.10.0"
moviepy = "^1.0.3"
click = "^8.0.4"
hyperstate = "^0.3.9"
entity-gym = "^0.1.2"
rogue-net = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
