[tool.poetry]
name = "enn_zoo"
version = "0.1.0"
description = "A collections of environments which can be used with entity-neural-networks"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
griddly = {version = "^1.2.21"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
