[tool.poetry]
name = "enn_zoo"
version = "0.1.0"
description = "A collections of environments which can be used with entity-neural-networks"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
griddly = {version = "1.3.0"}
requests = "^2.27.1"
orjson = "^3.6.5"
types-requests = "^2.27.7"
hyperstate = "^0.3.8"
enn_ppo = {path = "../enn_ppo", develop = true}
web-pdb = "^1.5.7"
vizdoom = {version = "^1.1.11", optional = true}
procgen = "^0.10.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
vizdoom = ["vizdoom"]
