[tool.poetry]
name = "rogue_net"
version = "0.1.0"
description = "Entity Networks compatible with EntityGym"
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
ragged-buffer = "^0.3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
